# neurogpu

./: README.md
c/: Makefile
c/nbproject/: configurations.xml  project.xml
c/nbproject/private/: Default.properties  configurations.xml
cuda/: Makefile
cuda/nbproject/: project.xml
cuda/nbproject/private/: configurations.xml
opencl/: .gitignore  CMakeLists.txt  Makefile
opencl/include/: apiopencl.h
opencl/nbproject/: configurations.xml  project.xml
opencl/src/: apiopencl.cpp  iris.cpp
